--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -74,12 +74,13 @@ set -g visual-activity on
 # re-number windows when one is closed
 set -g renumber-windows on
 
-# navigate splits
-# from https://gist.github.com/andreyvit/2921703
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+# smart pane switching with awareness of vim splits
+# From https://robots.thoughtbot.com/seamlessly-navigate-vim-and-tmux-splits
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # some nice session trix
 # from https://gist.github.com/andreyvit/2921703
