--- a/.gitmodules
+++ b/.gitmodules
@@ -31,6 +31,9 @@
 [submodule "home/vim/bundle/vim-commentary"]
 	path = home/vim/bundle/vim-commentary
 	url = https://github.com/tpope/vim-commentary.git
+[submodule "home/vim/bundle/nerdtree"]
+	path = home/vim/bundle/nerdtree
+	url = https://github.com/scrooloose/nerdtree.git
 [submodule "home/vim/bundle/vim-surround"]
 	path = home/vim/bundle/vim-surround
 	url = https://github.com/tpope/vim-surround.git
@@ -43,18 +46,15 @@
 [submodule "home/vim/bundle/vim-repeat"]
 	path = home/vim/bundle/vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
-[submodule "home/vim/bundle/vim-vinegar"]
-	path = home/vim/bundle/vim-vinegar
-	url = https://github.com/tpope/vim-vinegar.git
 [submodule "home/vim/bundle/vim-unimpaired"]
 	path = home/vim/bundle/vim-unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
-[submodule "home/vim/bundle/syntastic"]
-	path = home/vim/bundle/syntastic
-	url = https://github.com/scrooloose/syntastic.git
 [submodule "home/vim/bundle/gist-vim"]
 	path = home/vim/bundle/gist-vim
 	url = https://github.com/mattn/gist-vim.git
+[submodule "home/vim/bundle/webapi-vim"]
+	path = home/vim/bundle/webapi-vim
+	url = https://github.com/mattn/webapi-vim.git
 [submodule "home/vim/bundle/ctrlp.vim"]
 	path = home/vim/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
@@ -76,6 +76,9 @@
 [submodule "home/vim/bundle/vim-tmux-navigator"]
 	path = home/vim/bundle/vim-tmux-navigator
 	url = https://github.com/christoomey/vim-tmux-navigator.git
+[submodule "home/vim/bundle/vim-css-color"]
+	path = home/vim/bundle/vim-css-color
+	url = https://github.com/ap/vim-css-color.git
 [submodule "home/vim/bundle/vim-textobj-user"]
 	path = home/vim/bundle/vim-textobj-user
 	url = https://github.com/kana/vim-textobj-user.git
@@ -106,6 +109,3 @@
 [submodule "home/vim/bundle/vim-indent-object"]
 	path = home/vim/bundle/vim-indent-object
 	url = https://github.com/michaeljsmith/vim-indent-object.git
-[submodule "home/vim/bundle/webapi-vim"]
-	path = home/vim/bundle/webapi-vim
-	url = https://github.com/mattn/webapi-vim.git
