Add shortcut for yanking from tmux

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -11,6 +11,8 @@ set -g prefix C-o
 
 # create 'v' alias for selecting text
 bind-key -t vi-copy v begin-selection
+# create 'y' alias for pasting text
+bind-key -t vi-copy y begin-selection
 
 # paste
 unbind C-p
