Add keybindings for cycling windows

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -86,6 +86,8 @@ bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # some nice session trix
 # from https://gist.github.com/andreyvit/2921703
-bind-key -n M-8 choose-session
-bind-key -n M-9 switch-client -p
-bind-key -n M-0 switch-client -n
+bind-key -n M-6 choose-session
+bind-key -n M-7 switch-client -p
+bind-key -n M-8 switch-client -n
+bind-key -n M-9 select-window -p
+bind-key -n M-0 select-window -n
