--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -91,3 +91,7 @@ bind-key -n M-7 switch-client -p
 bind-key -n M-8 switch-client -n
 bind-key -n M-9 select-window -p
 bind-key -n M-0 select-window -n
+
+# Swap windows
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
