--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -31,9 +31,6 @@ bind ^J select-pane -t :.+
 # Status bar, found here:
 # https://github.com/chrishunt/dot-files/blob/master/.tmux.conf
 
-# enable UTF-8 support in status bar
-set -g status-utf8 on
-
 # set refresh interval for status bar
 set -g status-interval 30
 
@@ -95,3 +92,8 @@ bind-key -n M-0 select-window -n
 # Swap windows
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
+
+# Fix clipboard on sierra
+# See https://stackoverflow.com/questions/39645253/clipboard-failure-in-tmux-vim-after-upgrading-to-macos-sierra
+set -g default-shell $SHELL
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
