Update tmux config to work with latest
https://github.com/tmux/tmux/issues/592

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -4,15 +4,10 @@ setw -g mode-keys vi
 unbind C-b
 set -g prefix C-o
 
-# copy with 'enter' or 'y' and send to mac os clipboard: http://goo.gl/2Bfn8
-# unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
 # create 'v' alias for selecting text
-bind-key -t vi-copy v begin-selection
+bind-key -T copy-mode-vi 'v' send -X copy-selection
 # create 'y' alias for pasting text
-bind-key -t vi-copy y begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # paste
 unbind C-p
