Update tmux styles for 2.9

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -51,15 +51,12 @@ set -s escape-time 0
 set -g status-bg colour235
 set -g status-fg white
 
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg colour243
-set-window-option -g window-status-activity-fg colour237
-set-window-option -g window-status-activity-bg black
+# Highlight current and active tabs
+set-window-option -g window-status-current-style fg=black,bg=colour243,none
+set-window-option -g window-status-activity-style fg=colour243,bg=colour237,none
 
-set -g pane-border-fg colour235
-set -g pane-border-bg black
-set -g pane-active-border-fg colour243
-set -g pane-active-border-bg black
+set -g pane-border-style fg=colour237
+set -g pane-active-border-style fg=white
 
 # highlight window when it has new activity
 setw -g monitor-activity on
