Fiddle with vim bundles and misc

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -88,4 +88,9 @@ bind-key -n C-S-Right swap-window -t +1
 # Fix clipboard on sierra
 # See https://stackoverflow.com/questions/39645253/clipboard-failure-in-tmux-vim-after-upgrading-to-macos-sierra
 set -g default-shell $SHELL
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+
+# For window/putty
+set -g default-terminal "xterm"
+
+# alias tmux="TERM=screen-256color-bce tmux"
