--- a/.gitmodules
+++ b/.gitmodules
@@ -64,3 +64,12 @@
 [submodule "home/vim/bundle/vim-textobj-entire"]
 	path = home/vim/bundle/vim-textobj-entire
 	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "home/vim/bundle/tsuquyomi"]
+	path = home/vim/bundle/tsuquyomi
+	url = https://github.com/Quramy/tsuquyomi.git
+[submodule "home/vim/bundle/typescript-vim"]
+	path = home/vim/bundle/typescript-vim
+	url = https://github.com/leafgarland/typescript-vim.git
+[submodule "home/vim/bundle/ale"]
+	path = home/vim/bundle/ale
+	url = https://github.com/dense-analysis/ale.git
