--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -94,3 +94,5 @@ set -g default-shell $SHELL
 set -g default-terminal "xterm"
 
 # alias tmux="TERM=screen-256color-bce tmux"
+
+set-option -g default-shell /usr/bin/zsh
