--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -93,6 +93,6 @@ set -g default-shell $SHELL
 # For window/putty
 set -g default-terminal "xterm"
 
-# alias tmux="TERM=screen-256color-bce tmux"
+alias tmux="TERM=screen-256color-bce tmux"
 
 set-option -g default-shell /usr/bin/zsh
