--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -90,9 +90,7 @@ bind-key -n C-S-Right swap-window -t +1
 set -g default-shell $SHELL
 # set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
-# For window/putty
-set -g default-terminal "xterm"
-
-alias tmux="TERM=screen-256color-bce tmux"
+# set -g default-terminal "xterm"
+set -g default-terminal "screen-256color"
 
 set-option -g default-shell /usr/bin/zsh
