--- a/home/tmuxp/dev.yaml
+++ b/home/tmuxp/dev.yaml
@@ -3,25 +3,22 @@ windows:
 - window_name: app
   focus: true
   layout: main-vertical
-  shell_command_before:
-    - cd code/frontend
+  start_directory: code/frontend
   panes:
     - shell_command: vim
       focus: true
     - yarn dev
-    - blank
+    - yarn tsc --watch
+    - wpf 'yarn lint'
 - window_name: notes
   layout: main-vertical
-  shell_command_before:
-    - cd code/notes
+  start_directory: code/notes
   panes:
     - shell_command: vim home.md
       focus: true
     - nodemon --exec 'git pull ; git add . ; git ci -amMisc ; git push -u' --watch home.md
 - window_name: dotfiles
   layout: main-vertical
-  shell_command_before:
-    - cd code/dotfiles
+  start_directory: code/dotfiles
   panes:
     - vim
-    - blank
