--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "home/vim/bundle/vim-textobj-entire"]
 	path = home/vim/bundle/vim-textobj-entire
 	url = https://github.com/kana/vim-textobj-entire.git
+[submodule "home/vim/bundle/papercolor-theme"]
+	path = home/vim/bundle/papercolor-theme
+	url = https://github.com/NLKNguyen/papercolor-theme.git
