--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -14,6 +14,6 @@ windows:
   layout: main-vertical
   start_directory: code/notes
   panes:
-    - shell_command: vim home.md
+    - shell_command: vim live.md
       focus: true
     - nodemon --exec 'git pull ; git add . && git commit -ammike ; git push' --ext 'js,md,ts,tsx'
