Improve tsc and lint watching

--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -8,8 +8,8 @@ windows:
     - shell_command: vim
       focus: true
     - yarn dev
-    - yarn tsc --watch
-    - watch yarn lint
+    - wts
+    - wl
 - window_name: notes
   layout: main-vertical
   start_directory: code/notes
