--- a/home/tmuxp/hack.yaml
+++ b/home/tmuxp/hack.yaml
@@ -8,8 +8,8 @@ windows:
     - shell_command: vim
       focus: true
     - yarn dev
-    - yarn tsc --watch
-    - watch yarn lint
+    - wts
+    - wl
 - window_name: notes
   layout: main-vertical
   start_directory: code/notes
@@ -24,8 +24,8 @@ windows:
     - shell_command: vim
       focus: true
     - yarn dev
-    - yarn tsc --watch
-    - watch yarn lint
+    - wts
+    - wl
 - window_name: dotfiles
   layout: main-vertical
   start_directory: code/dotfiles
