--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -7,9 +7,9 @@ windows:
   panes:
     - shell_command: vim
       focus: true
-    - yarn dev
-    - wts
-    - wl
+    - yarn test:watch
+    - yarn types:watch
+    - yarn lint:watch
 - window_name: notes
   layout: main-vertical
   start_directory: code/notes
