--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -7,7 +7,7 @@ windows:
   panes:
     - shell_command: vim
       focus: true
-    - yarn test:watch
+    - yarn dev
     - yarn types:watch
     - yarn lint:watch
 - window_name: notes
