--- a/.gitmodules
+++ b/.gitmodules
@@ -79,3 +79,6 @@
 [submodule "home/vim/bundle/fugitive-gitlab.vim"]
 	path = home/vim/bundle/fugitive-gitlab.vim
 	url = https://github.com/shumphrey/fugitive-gitlab.vim.git
+[submodule "home/vim/bundle/vim-exchange"]
+	path = home/vim/bundle/vim-exchange
+	url = https://github.com/tommcdo/vim-exchange.git
