--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "home/vim/bundle/vim-exchange"]
 	path = home/vim/bundle/vim-exchange
 	url = https://github.com/tommcdo/vim-exchange.git
+[submodule "home/vim/bundle/gundo.vim"]
+	path = home/vim/bundle/gundo.vim
+	url = https://github.com/sjl/gundo.vim.git
