--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -25,15 +25,15 @@ windows:
     - shell_command: vim
       focus: true
     - yarn test
-- window_name: vmd
-  layout: main-vertical
-  start_directory: code/vmd
-  panes:
-    - shell_command: vim
-      focus: true
-    - yarn dev
-    - yarn types:watch
-    - yarn lint:watch
+# - window_name: vmd
+#   layout: main-vertical
+#   start_directory: code/vmd
+#   panes:
+#     - shell_command: vim
+#       focus: true
+#     - yarn dev
+#     - yarn types:watch
+#     - yarn lint:watch
 - window_name: dotfiles
   layout: main-vertical
   start_directory: code/dotfiles
