--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -82,8 +82,12 @@ bind-key -n M-9 select-window -p
 bind-key -n M-0 select-window -n
 
 # Swap windows
-bind -n C-S-Left { swap-window -t -1; previous-window }
-bind -n C-S-Right { swap-window -t +1; next-window }
+# bind -n C-S-Left { swap-window -t -1; previous-window }
+# bind -n C-S-Right { swap-window -t +1; next-window }
+# bind-key -n C-S-Left swap-window -t -1
+# bind-key -n C-S-Right swap-window -t +1
+bind-key -n M-1 swap-window -t -1
+bind-key -n M-2 swap-window -t +1
 
 # Fix clipboard on sierra
 # See https://stackoverflow.com/questions/39645253/clipboard-failure-in-tmux-vim-after-upgrading-to-macos-sierra
