--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -3,56 +3,96 @@ windows:
 - window_name: front
   focus: true
   layout: main-vertical
-  start_directory: code/quote-app-ui
+  start_directory: ~/code/quote-app-ui
   panes:
     - shell_command: vim
       focus: true
-    - yarn types:watch
-    - yarn lint:watch
+    - shell_command: yarn dev
+      shell_command_before: nvm use 12
+    - shell_command: yarn types:watch
+      shell_command_before: nvm use 12
+    - shell_command: yarn lint:watch
+      shell_command_before: nvm use 12
 - window_name: notes
   layout: main-vertical
-  start_directory: code/notes
+  start_directory: ~/code/notes
   panes:
     - shell_command: vim live.md
       focus: true
     - nodemon --exec 'git pull ; git add . && git commit -ammike ; git push' --ext 'js,md,ts,tsx'
 - window_name: e2e
   layout: main-vertical
-  start_directory: code/e2e-tests
+  start_directory: ~/code/e2e-template
   panes:
     - shell_command: vim
       focus: true
-    - yarn test
-- window_name: debug
-  focus: true
+    - yarn dev
+    - yarn lint:watch
+- window_name: dash
   layout: main-vertical
-  start_directory: code/quote-app-debug
+  start_directory: ~/code
+  panes:
+    - shell_command: watch -n 10 dash.sh
+      focus: true
+- window_name: mrs
+  layout: main-vertical
+  start_directory: ~/code
+  panes:
+    - shell_command: watch -n 10 vm show-merge-requests --repo quote-app-ui --namespace vermontmutual
+      focus: true
+# - window_name: debug
+#   layout: main-vertical
+#   start_directory: ~/code/quote-app-debug
+#   panes:
+#     - shell_command: vim
+#       focus: true
+#     - yarn dev --port 2222
+# - window_name: fixtures
+#   layout: main-vertical
+#   start_directory: ~/code/fixtures
+#   panes:
+#     - shell_command: vim
+#       focus: true
+# - window_name: db
+#   layout: main-vertical
+#   start_directory: ~/code/notes
+#   panes:
+#     - shell_command: vim queries.mysql
+#       focus: true
+# - window_name: dotfiles
+#   layout: main-vertical
+#   start_directory: ~/code/dotfiles
+#   panes:
+#     - shell_command: vim
+#       focus: true
+# - window_name: qac
+#   layout: main-vertical
+#   start_directory: ~/code/quote-app-common
+#   panes:
+#     - shell_command: vim
+#       focus: true
+- window_name: events-ui
+  layout: main-vertical
+  start_directory: ~/code/events-ui
   panes:
     - shell_command: vim
       focus: true
-    - yarn dev --port 2222
-- window_name: fixtures
+    - eval $(env.sh) yarn dev --port 4444
+    - yarn lint:watch
+- window_name: events-api
   layout: main-vertical
-  start_directory: code/fixtures
+  start_directory: ~/code/events-api
   panes:
     - shell_command: vim
       focus: true
-- window_name: db
-  layout: main-vertical
-  start_directory: code/notes
-  panes:
-    - shell_command: vim queries.mysql
-      focus: true
-- window_name: dotfiles
-  layout: main-vertical
-  start_directory: code/dotfiles
-  panes:
-    - shell_command: vim
-      focus: true
-- window_name: qac
-  focus: true
-  layout: main-vertical
-  start_directory: code/quote-app-common
-  panes:
-    - shell_command: vim
-      focus: true
+    - eval $(env.sh) yarn dev:api
+    - eval $(env.sh) yarn dev:worker
+    - yarn test:watch
+    - yarn lint:watch
+# - window_name: e2e-prev
+#   layout: main-vertical
+#   start_directory: ~/code/quote-app-e2e
+#   panes:
+#     - shell_command: vim
+#       focus: true
+#     - yarn test
