--- a/home/tmuxp/work.yaml
+++ b/home/tmuxp/work.yaml
@@ -20,57 +20,57 @@ windows:
     - shell_command: vim live.md
       focus: true
     - nodemon --exec 'git pull ; git add . && git commit -ammike ; git push' --ext 'js,md,ts,tsx'
-# - window_name: e2e
+- window_name: e2e
+  layout: main-vertical
+  start_directory: ~/code/e2e-template
+  panes:
+    - shell_command: vim
+      focus: true
+    - yarn dev
+    - yarn lint:watch
+- window_name: dash
+  layout: main-vertical
+  start_directory: ~/code
+  panes:
+    - shell_command: watch -n 10 dash.sh
+      focus: true
+- window_name: mrs
+  layout: main-vertical
+  start_directory: ~/code
+  panes:
+    - shell_command: watch -n 10 vm show-merge-requests --repo quote-app-ui --namespace vermontmutual
+      focus: true
+# - window_name: debug
 #   layout: main-vertical
-#   start_directory: ~/code/e2e-template
+#   start_directory: ~/code/quote-app-debug
 #   panes:
 #     - shell_command: vim
 #       focus: true
-#     - yarn dev
-#     - yarn lint:watch
-# - window_name: dash
+#     - yarn dev --port 2222
+# - window_name: fixtures
 #   layout: main-vertical
-#   start_directory: ~/code
+#   start_directory: ~/code/fixtures
 #   panes:
-#     - shell_command: watch -n 10 dash.sh
+#     - shell_command: vim
 #       focus: true
-# - window_name: mrs
+# - window_name: db
 #   layout: main-vertical
-#   start_directory: ~/code
+#   start_directory: ~/code/notes
 #   panes:
-#     - shell_command: watch -n 10 vm show-merge-requests --repo quote-app-ui --namespace vermontmutual
+#     - shell_command: vim queries.mysql
 #       focus: true
-# # - window_name: debug
-# #   layout: main-vertical
-# #   start_directory: ~/code/quote-app-debug
-# #   panes:
-# #     - shell_command: vim
-# #       focus: true
-# #     - yarn dev --port 2222
-# # - window_name: fixtures
-# #   layout: main-vertical
-# #   start_directory: ~/code/fixtures
-# #   panes:
-# #     - shell_command: vim
-# #       focus: true
-# # - window_name: db
-# #   layout: main-vertical
-# #   start_directory: ~/code/notes
-# #   panes:
-# #     - shell_command: vim queries.mysql
-# #       focus: true
-# # - window_name: dotfiles
-# #   layout: main-vertical
-# #   start_directory: ~/code/dotfiles
-# #   panes:
-# #     - shell_command: vim
-# #       focus: true
-# # - window_name: qac
-# #   layout: main-vertical
-# #   start_directory: ~/code/quote-app-common
-# #   panes:
-# #     - shell_command: vim
-# #       focus: true
+# - window_name: dotfiles
+#   layout: main-vertical
+#   start_directory: ~/code/dotfiles
+#   panes:
+#     - shell_command: vim
+#       focus: true
+# - window_name: qac
+#   layout: main-vertical
+#   start_directory: ~/code/quote-app-common
+#   panes:
+#     - shell_command: vim
+#       focus: true
 # - window_name: events-ui
 #   layout: main-vertical
 #   start_directory: ~/code/events-ui
