--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -86,8 +86,10 @@ bind-key -n M-2 select-window -n
 # bind -n C-S-Right { swap-window -t +1; next-window }
 # bind-key -n C-S-Left swap-window -t -1
 # bind-key -n C-S-Right swap-window -t +1
-bind-key -n M-3 swap-window -t -1
-bind-key -n M-4 swap-window -t +1
+# bind-key -n M-3 swap-window -t -1
+# bind-key -n M-4 swap-window -t +1
+bind-key -n M-3 { swap-window -t -1; previous-window }
+bind-key -n M-4 { swap-window -t +1; next-window }
 
 # Fix clipboard on sierra
 # See https://stackoverflow.com/questions/39645253/clipboard-failure-in-tmux-vim-after-upgrading-to-macos-sierra
