--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -100,3 +100,6 @@ set -g default-shell $SHELL
 set -g default-terminal "screen-256color"
 
 set-option -g default-shell /usr/bin/zsh
+
+# per neovim :healthcheck
+set-option -g focus-events on
