--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -71,7 +71,6 @@ bind -n M-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n M-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n M-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n M-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n M-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # some nice session trix
 # from https://gist.github.com/andreyvit/2921703
@@ -82,24 +81,13 @@ bind-key -n M-1 select-window -p
 bind-key -n M-2 select-window -n
 
 # Swap windows
-# bind -n C-S-Left { swap-window -t -1; previous-window }
-# bind -n C-S-Right { swap-window -t +1; next-window }
-# bind-key -n C-S-Left swap-window -t -1
-# bind-key -n C-S-Right swap-window -t +1
-# bind-key -n M-3 swap-window -t -1
-# bind-key -n M-4 swap-window -t +1
 bind-key -n M-3 { swap-window -t -1; previous-window }
 bind-key -n M-4 { swap-window -t +1; next-window }
 
-# Fix clipboard on sierra
-# See https://stackoverflow.com/questions/39645253/clipboard-failure-in-tmux-vim-after-upgrading-to-macos-sierra
-set -g default-shell $SHELL
-# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
-
-# set -g default-terminal "xterm"
 set -g default-terminal "screen-256color"
 
 set-option -g default-shell /usr/bin/zsh
 
 # per neovim :healthcheck
 set-option -g focus-events on
+set-option -sa terminal-overrides ",xterm*:Tc"
