Fix swapping tmux windows

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -81,8 +81,8 @@ bind-key -n M-1 select-window -p
 bind-key -n M-2 select-window -n
 
 # Swap windows
-bind-key -n M-3 { swap-window -t -1; previous-window }
-bind-key -n M-4 { swap-window -t +1; next-window }
+bind-key -n M-3 swap-window -t :-1
+bind-key -n M-4 swap-window -t :+1
 
 set -g default-terminal "screen-256color"
 
