--- a/preseed.cfg
+++ b/preseed.cfg
@@ -99,7 +99,7 @@ popularity-contest popularity-contest/participate boolean false
 
 # Select base install
 tasksel tasksel/first multiselect standard, ssh-server, desktop
-tasksel tasksel/desktop multiselect xfce
+# tasksel tasksel/desktop multiselect xfce
 
 # Setup passwordless sudo for user
 d-i preseed/late_command string \
