--- a/preseed.cfg
+++ b/preseed.cfg
@@ -98,7 +98,8 @@ apt-mirror-setup apt-setup/use_mirror boolean true
 popularity-contest popularity-contest/participate boolean false
 
 # Select base install
-tasksel tasksel/first multiselect standard, ssh-server, desktop
+tasksel tasksel/first multiselect standard, ssh-server
+# tasksel tasksel/first multiselect standard, ssh-server, desktop
 # tasksel tasksel/desktop multiselect xfce
 
 # Setup passwordless sudo for user
